--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <h1>EVANGELION melhor que o SAO</h1>
 
 <p>Em um mundo pós-apocalíptico, uma organização paramilitar chamada <strongh>NERV</strongh> é criada para combater monstros chamados Anjos, utilizando seres gigantes chamados Unidades Evangelion ou EVAs.</p>
