--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title>Barbearia Alura</title>
+      <style>
+        p{
+          text-align: center
+        }
+      </style>
+    </head>
+    <body>
+        <h1 style="text-aling: center">Sobre a Barbearia Alura</h1>
 
-<h1>EVANGELION melhor que o SAO</h1>
+        <p style="text-aling: center">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
+        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-<p>Em um mundo pós-apocalíptico, uma organização paramilitar chamada <strongh>NERV</strongh> é criada para combater monstros chamados Anjos, utilizando seres gigantes chamados Unidades Evangelion ou EVAs.</p>
+        <p style="font-size:20px; "text-aling: center"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-<p><em>Nossa missão é:<strong>"Derrotar os anjos e impedir de causa o terceiro impacto"</strong>.</em></p>
-
-<p>MISATO MELHOR QUE TODOS</p>
-
-<tag></tag>
+        <p style="text-aling: center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
+        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </body>
+</html>
