--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <style>
+        <link rel="stylesheet" href="style.css">
            p {
           text-align: center
         }
