--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <h1 style="text-aling: center">Sore a Barberia Alura</h1>
+        <h1>Sore a Barberia Alura</h1>
 
         <p style="text-aling: center">Localizada no corção da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melor para o seu cabelo e barba. 
         Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
