--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     </head>
 
     <body>
+        <img id="banner" src="flo.jpeg">
+        
         <h1>Sore a Barberia Alura</h1>
 
         <p style="text-aling: center">Localizada no corção da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melor para o seu cabelo e barba. 
         Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <p style="font-size:20px; "text-aling: center"><em>Nossa missão é: <strong>"Proporionar auto-estima e qualiade de vida aos clientes"</strong>.</em></p>
+        <p id="missao"><em>Nossa missão é: <strong>"Proporionar auto-estima e qualiade de vida aos clientes"</strong>.</em></p>
 
         <p style="text-aling: center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
         O atendiento possui padrão de excelência e agilidade, garanindo qualidade e satisação dos nosos clientes.</p>
