--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style.css">
-           p {
-          text-align: center
-        }
-        </style>
-    </head>
+	<head>
+		<meta charset="UTF-8">
+		<title>Barbearia Alura</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
 
-    <body>
-        <img id="banner" src="flo.jpeg">
-        
-        <h1>Sore a Barberia Alura</h1>
+	<body>
+		<img id="banner" src="flo.jpg">
 
-        <p style="text-aling: center">Localizada no corção da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melor para o seu cabelo e barba. 
-        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+		<h1>Sobre a Barbearia Alura</h1>
+ 
+		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <p id="missao"><em>Nossa missão é: <strong>"Proporionar auto-estima e qualiade de vida aos clientes"</strong>.</em></p>
+		<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-        <p style="text-aling: center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-        O atendiento possui padrão de excelência e agilidade, garanindo qualidade e satisação dos nosos clientes.</p>
-    </body>
+		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+	</body>
 </html>
