--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
+		<title>EVANGELION</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 		<img id="banner" src="flo.jpeg">
 
-		<h1>Sobre a Barbearia Alura</h1>
+		<h1>Sobre EVANGELION</h1>
  
-		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+		<p>Neon Genesis Evangelion é uma série de anime japonesa do gênero mecha dirigida por Hideaki Anno, produzida pelo estúdio Gainax e animada pela Tatsunoko que foi transmitida pela TV Tokyo de 4 de outubro de 1995 a 27 de março de 1996.</p>
 
 		<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
