--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
  
 		<p>Neon Genesis Evangelion é uma série de anime japonesa do gênero mecha dirigida por Hideaki Anno, produzida pelo estúdio Gainax e animada pela Tatsunoko que foi transmitida pela TV Tokyo de 4 de outubro de 1995 a 27 de março de 1996.</p>
 
-		<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+		<p id="missao"><em>Sua missão é: <strong>"
+Desistir no meio do caminho é pior do que nunca ao menos ter tentado. Alguém que realmente odeia a si mesmo não pode amar, ele não pode colocar sua confiança nos outros. Não sei por que o ser humano se esforça para entender o outro. Lembre-se, as pessoas são incapazes de se entender completamente."</strong>.</em></p>
 
-		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+		<p>
+Um dos mechas mais tradicionais do mundo, Evangelion acompanha as crianças escolhidas para pilotar implacáveis máquinas na batalha contra os Anjos, monstros gigantes que querem acabar com o que restou da humanidade. A produção foi premiada na década de 1990, conquistando o Anime Grand Prix</p>
 		
 		<h2>Beneficios</h2>
 
 		<ul>
 		
-			<li>class="item">*espaco diferenciado</li>
-			<li>class="item">*atendimento aos clientes</li>
-			<li>class="item">*localizacao</li>
-			<li>class="item">*profissionais qualificados</li>
+			<li>class="item">*anime bom</li>
+			<li>class="item">*MELHOR QUE SAO(sword art online)</li>
+			<li>class="item">*asuka</li>
+			<li>class="item">*REI linda</li>
 		</ul>
 	</body>
 </html>
