--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<title>EVANGELION</title>
 		<link rel="stylesheet" href="style.css">
-	</head>
-
+	</headler>
+	<h1>EVANELION</h1>
 	<body>
-		<img id="banner" src="flo.jpeg">
-
+		<img id="banner" src="EVA.jpeg">
+		<div class="principal"
 		<h1>Sobre EVANGELION</h1>
  
 		<p>Neon Genesis Evangelion é uma série de anime japonesa do gênero mecha dirigida por Hideaki Anno, produzida pelo estúdio Gainax e animada pela Tatsunoko que foi transmitida pela TV Tokyo de 4 de outubro de 1995 a 27 de março de 1996.</p>
